# vcf

./: .buildconfig  .editorconfig  README.md  meson.build  vcf.doap
src/: meson.build  vcf-closures.vala  vcf-collection.vala  vcf-concat-collection.vala  vcf-delegates.vala  vcf-equatable.vala  vcf-flat-collection.vala  vcf-hashable.vala  vcf-iterable.vala  vcf-iterator.vala  vcf-list.vala  vcf-map-collection.vala  vcf-map.vala  vcf-mapped-collection.vala  vcf-skip-collection.vala  vcf-skip-while-collection.vala  vcf-stringifiable.vala  vcf-take-collection.vala  vcf-take-while-collection.vala  vcf-utils.vala  vcf-where-collection.vala
